# margo-microservice-template

./: CMakeLists.txt  README.md  setup.py  spack.yaml
.github/: initial-setup.py
.github/workflows/: codecov.yml  setup.yml  test.yml
examples/: CMakeLists.txt  admin.c  alpha-provider.json  client.c  server.c
include/alpha/: alpha-admin.h  alpha-backend.h  alpha-client.h  alpha-common.h  alpha-resource.h  alpha-server.h
python/: py-alpha-client.cpp  py-alpha-server.cpp  util.hpp
python/mochi/alpha/: client.py  test_resource_handle.py
src/: CMakeLists.txt  admin.c  admin.h  alpha-config.cmake.in  bedrock-module.c  bedrock-module.cpp  client.c  client.h  config.h.in  logging.h  provider.c  provider.h  types.h
src/beta/: beta-backend.c  beta-backend.h
src/dummy/: dummy-backend.c  dummy-backend.h
tests/: CMakeLists.txt  spack.yaml  test-admin.c  test-client.c  test-client.cpp
